--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <p class="newsletter-text"></p>
+
     <script type="text/javascript">
 
 
@@ -40,7 +43,17 @@
 
 
 
+        const NAME ='Cristina';
+        const GAME = 'Jak 2';
+        const DISCOUNT = 20;
+        const NEWSLETTER = `Hola ${NAME}, Como regalo de bienvenida al Club .... `;
+
+        document.querySelector('.newsletter-text').innerHTML = NEWSLETTER;
+
 
     </script>
+
+
+
 </body>
 </html>
